# teamsh

./: .gitignore  CLAUDE.md  Cargo.toml  OUTLOOK_API_NOTES.md  README.md  refresh-token.py  teamsh.tmTheme
docs/plans/: 2026-03-05-teamsh-design.md  2026-03-05-teamsh-implementation.md  2026-03-05-teamsh-v2-design.md  2026-03-05-teamsh-v2-implementation.md
scripts/: refresh-token.py
src/: TeamshMessage.sublime-syntax  api.rs  auth.rs  cache.rs  cli.rs  html.rs  main.rs  store.rs  teamsh.tmTheme  tv-preview.sh  types.rs
src/tui/: app.rs  mod.rs
