[package]
name = "teamsh"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
urlencoding = "2"
unicode-width = "0.2"
chrono = "0.4"
base64 = "0.22"
open = "5"
